--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id "com.diffplug.spotless" version "5.12.4"
 }
 
 group 'org.example'
@@ -17,4 +18,27 @@ dependencies {
 
     // https://mvnrepository.com/artifact/ru.vyarus/dropwizard-guicey
     implementation group: 'ru.vyarus', name: 'dropwizard-guicey', version: '5.3.0'
+
+    // https://mvnrepository.com/artifact/com.diffplug.spotless/spotless-plugin-gradle
+    implementation group: 'com.diffplug.spotless', name: 'spotless-plugin-gradle', version: '5.14.3'
+
 }
+
+spotless {
+    java {
+        importOrder() // standard import order
+//        importOrder('java', 'javax', 'com.acme', '') // or importOrderFile
+        // You probably want an empty string at the end - all of the
+        // imports you didn't specify explicitly will go there.
+
+        removeUnusedImports()
+
+        googleJavaFormat() // has its own section below
+        //eclipse()          // has its own section below
+        //prettier()         // has its own section below
+        //clangFormat()      // has its own section below
+
+        licenseHeader '/* (C) $YEAR */' // or licenseHeaderFile
+    }
+}
+
