--- a/build.gradle
+++ b/build.gradle
@@ -31,12 +31,19 @@ spotless {
         // You probably want an empty string at the end - all of the
         // imports you didn't specify explicitly will go there.
 
-        removeUnusedImports()
+        //removeUnusedImports()
 
-        googleJavaFormat() // has its own section below
+        //googleJavaFormat() // has its own section below
         //eclipse()          // has its own section below
         //prettier()         // has its own section below
         //clangFormat()      // has its own section below
+
+        target '**/*.java'
+        googleJavaFormat().aosp()
+        removeUnusedImports()
+        trimTrailingWhitespace()
+        indentWithSpaces()
+        endWithNewline()
 
         licenseHeader '/* (C) $YEAR */' // or licenseHeaderFile
     }
