--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,26 @@
 version: "3"
 services:
-  mysql:
+  calculator-api-redis:
     image: redis:latest
-    container_name: calculator-redis
+    container_name: calculator-api-redis
     restart: always
     ports:
       - 6379
     expose:
       - 6379
-  calculator:
+  calculator-api-app:
     build:
       context: .
     ports:
       - 8080:8080
       - 8081:8081
-    container_name: calculator-container
+    container_name: calculator-api-app
+  calculator-api-gateway:
+    image: calculator-gateway.jar:latest
+    build:
+      context: .
+    ports:
+      - 9000:9000
+    expose:
+      - 9000
+    container_name: calculator-api-gateway
